[gd_scene load_steps=2 format=3 uid="uid://co8800jmnlrms"]

[ext_resource type="Script" path="res://Menu/SettingsMenu.gd" id="1_44em4"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44em4")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.756863, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = -39.0
offset_right = 117.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Master"

[node name="Music" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"

[node name="Sound FX" type="Label" parent="HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Sound FX"

[node name="Slider" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Master" type="HSlider" parent="HBoxContainer/Slider"]
layout_mode = 2

[node name="Music" type="HSlider" parent="HBoxContainer/Slider"]
layout_mode = 2

[node name="Sound FX" type="HSlider" parent="HBoxContainer/Slider"]
layout_mode = 2

[node name="BackFromAudio" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="value_changed" from="HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Slider/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="BackFromAudio" to="." method="_on_back_from_audio_pressed"]
